<resources>
    <string name="app_name">Base project</string>
    <string name="header">Timetable for HSE FE</string>
    <string name="logo">HSE logo</string>
    <string name="button1">РАСПИСАНИЕ ДЛЯ СТУДЕНТОВ</string>
    <string name="button2">РАСПИСАНИЕ ДЛЯ ПРЕПОДАВАТЕЛЯ</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="teacherActivity.textView1">Выберите преподавателя:</string>
    <string name="teacherActivity.textTime">Сейчас: </string>
    <string name="teacherActivity.textStatus">Идет пара / нет пар</string>
    <string name="teacherActivity.textSubject">Дисциплина</string>
    <string name="teacherActivity.textCabinet">Кабинет</string>
    <string name="teacherActivity.textCorp">Корпус</string>
    <string name="teacherActivity.textTeacher">Преподаватель</string>
    <string name="teacherActivity.button1">РАСПИСАНИЕ НА\n ДЕНЬ</string>
    <string name="teacherActivity.button2">РАСПИСАНИЕ НА\n НЕДЕЛЮ</string>
    <string name="studentActivity.textView1">Выберите группу:</string>
    <string name="settingsActivity.save">СОХРАНИТЬ</string>
    <string name="settingsActivity.textView1">Укажите фото:</string>
    <string name="settingsActivity.takePhoto">СДЕЛАТЬ ФОТО</string>
    <string name="settingsActivity.setName">Укажите ваше имя</string>
    <string name="settingsActivity.lightLevel">Текущая освещенность:</string>
    <string name="settingsActivity.sensors">Список всех датчиков:</string>
    <string name="settingsActivity.lux">lux</string>
</resources>